--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+.bp{
+  
+  /* border-width: 1px; */
+  border-color: black;
+  border-style: solid;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.board-position{
+  min-height: 70px;
+  background-color: rgb(250, 249, 231);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.xbp{
+  min-height: 150px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.purple{
+  background-color:purple;
+}
+.sky{
+  background-color:lightskyblue
+}
+.pink{
+  background-color:pink;
+}
+.orange{
+  background-color: orange;
+}
+.red{
+  background-color: red;
+}
+.yellow{
+  background-color: rgb(238, 238, 75);
+}
+.green{
+  background-color: green;
+}
+.blue{
+  background-color: blue;
+}
+
+.property-set{
+  min-width: 20%;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
